fix styles overflow in mesage

--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -101,7 +101,7 @@ html {
           margin-bottom: 0.2rem;
         }
         .mensage {
-          overflow-x: hidden;
+          overflow: hidden;
           width: 100%;
           display: flex;
           flex-wrap: wrap;
